[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Bad Advent of Code"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
